[gd_scene load_steps=2 format=3 uid="uid://dkk2cilj1ivi3"]

[ext_resource type="Script" uid="uid://b7iapth3xih8j" path="res://pause_menu.gd" id="1_nov15"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_nov15")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
offset_right = 320.0
offset_bottom = 320.0

[node name="ResumeButton" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Resume "

[node name="SettingsButton" type="Button" parent="Panel"]
layout_mode = 0
offset_top = 40.0
offset_right = 70.0
offset_bottom = 71.0
text = "Settings"

[node name="LevelSelectorButton" type="Button" parent="Panel"]
layout_mode = 0
offset_top = 80.0
offset_right = 115.0
offset_bottom = 111.0
text = "Level Selector"

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_top = 120.0
offset_right = 42.0
offset_bottom = 151.0
text = "Quit"
